--- a/package.json
+++ b/package.json
@@ -61,6 +61,27 @@
     "src/public/",
     "build.ts"
   ],
-  "dependencies": {},
-  "devDependencies": {}
+  "dependencies": {
+    "command-line-args": "^5.2.1",
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.3",
+    "express-async-error": "^0.0.2",
+    "express-async-errors": "^3.1.1",
+    "helmet": "^5.0.2",
+    "http-status-codes": "^2.2.0",
+    "jet-logger": "^1.1.5",
+    "mongoose": "^6.2.2",
+    "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "@types/command-line-args": "^5.2.0",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.13",
+    "@types/mongoose": "^5.11.97",
+    "@types/morgan": "^1.9.3",
+    "ts-node": "^10.5.0",
+    "tsconfig-paths": "^3.12.0"
+  }
 }
