--- a/src/pre-start/env/development.env
+++ b/src/pre-start/env/development.env
@@ -12,3 +12,7 @@ JET_LOGGER_MODE=CONSOLE
 JET_LOGGER_FILEPATH=jet-logger.log
 JET_LOGGER_TIMESTAMP=TRUE
 JET_LOGGER_FORMAT=LINE
+
+
+#DATABASE
+DB=mongodb+srv://jvargas:cfSNBxtflvARkF8U@mongodbserver.36qg1.mongodb.net/contacts_list?retryWrites=true&w=majority
