--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "helmet": "^5.0.2",
     "http-status-codes": "^2.2.0",
     "jet-logger": "^1.1.5",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.2",
     "morgan": "^1.10.0"
   },
