--- a/src/pre-start/env/development.env
+++ b/src/pre-start/env/development.env
@@ -16,3 +16,6 @@ JET_LOGGER_FORMAT=LINE
 
 #DATABASE
 DB=mongodb+srv://jvargas:cfSNBxtflvARkF8U@mongodbserver.36qg1.mongodb.net/contacts_list?retryWrites=true&w=majority
+
+JWT
+jwtSecret=TopSecret
