--- a/package.json
+++ b/package.json
@@ -62,8 +62,10 @@
     "build.ts"
   ],
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "command-line-args": "^5.2.1",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-async-error": "^0.0.2",
@@ -73,16 +75,21 @@
     "jet-logger": "^1.1.5",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "passport-jwt": "^4.0.0"
   },
   "devDependencies": {
     "@types/command-line-args": "^5.2.0",
     "@types/cookie-parser": "^1.4.2",
+    "@types/cors": "^2.8.12",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.3",
+    "@types/passport-jwt": "^3.0.6",
     "ts-node": "^10.5.0",
-    "tsconfig-paths": "^3.12.0"
+    "tsconfig-paths": "^3.12.0",
+    "typescript": "^4.5.5"
   }
 }
