--- a/package.json
+++ b/package.json
@@ -76,9 +76,11 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.2",
     "morgan": "^1.10.0",
+    "passport": "^0.5.2",
     "passport-jwt": "^4.0.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/command-line-args": "^5.2.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.12",
@@ -87,6 +89,7 @@
     "@types/jsonwebtoken": "^8.5.8",
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.3",
+    "@types/passport": "^1.0.7",
     "@types/passport-jwt": "^3.0.6",
     "ts-node": "^10.5.0",
     "tsconfig-paths": "^3.12.0",
