--- a/server/package.json
+++ b/server/package.json
@@ -76,6 +76,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.2",
     "morgan": "^1.10.0",
+    "multer": "^1.4.4",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0"
   },
@@ -89,6 +90,7 @@
     "@types/jsonwebtoken": "^8.5.8",
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.3",
+    "@types/multer": "^1.4.7",
     "@types/passport": "^1.0.7",
     "@types/passport-jwt": "^3.0.6",
     "ts-node": "^10.5.0",
